--- a/ios/uber_for_artisans_mobile/Info.plist
+++ b/ios/uber_for_artisans_mobile/Info.plist
@@ -2,6 +2,23 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSMicrophoneUsageDescription</key>
+	<string></string>
+	<key>NSCameraUsageDescription</key>
+	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Ionicons.ttf</string>
+		<string>MerriweatherSans-Bold.ttf</string>
+		<string>MerriweatherSans-Italic.ttf</string>
+		<string>MerriweatherSans-Regular.ttf</string>
+		<string>NunitoSans-Regular.ttf</string>
+		<string>NunitoSans-Italic.ttf</string>
+		<string>NunitoSans-Bold.ttf</string>
+		<string>NunitoSans-Black.ttf</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
