--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.8.0",
     "@react-native-community/masked-view": "^0.1.6",
-    "@react-navigation/native": "^5.0.6",
+    "@react-navigation/compat": "^5.1.8",
+    "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.0.6",
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-country-picker-modal": "^1.10.0",
+    "react-native-device-info": "^5.5.4",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-image-crop-picker": "^0.28.0",
     "react-native-otp-textinput": "0.0.6",
