--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.8.0",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/compat": "^5.1.8",
     "@react-navigation/native": "^5.1.5",
@@ -18,11 +19,16 @@
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-app-intro": "git+https://github.com/merryjs/react-native-app-intro.git",
+    "react-native-bottom-sheet-behavior": "^2.0.0",
     "react-native-country-picker-modal": "^1.10.0",
     "react-native-device-info": "^5.5.4",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-image-crop-picker": "^0.28.0",
+    "react-native-maps": "^0.27.1",
+    "react-native-onboarding-swiper": "^1.1.0",
     "react-native-otp-textinput": "0.0.6",
+    "react-native-ratings": "^6.5.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.0.0-beta.8",
