--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-app-intro": "git+https://github.com/merryjs/react-native-app-intro.git",
+    "react-native-autogrow-input": "^0.2.1",
     "react-native-bottom-sheet-behavior": "^2.0.0",
     "react-native-country-picker-modal": "^1.10.0",
     "react-native-device-info": "^5.5.4",
