--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-otp-textinput": "0.0.6",
     "react-native-ratings": "^6.5.0",
     "react-native-reanimated": "^1.7.0",
+    "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.0.0-beta.8",
     "react-native-svg": "^11.0.1",
